--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "css-loader": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "style-loader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
