--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "connected-react-router": "^6.5.2",
     "css-loader": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^1.0.0"
   },
   "devDependencies": {
