--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "react-hot-loader": "^4.12.8",
+    "redux-devtools-extension": "^2.13.8",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
