--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "react-hot-loader": "^4.12.8",
     "redux-devtools-extension": "^2.13.8",
     "webpack": "^4.36.1",
