--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.dev.config.js",
-    "build": "webpack --config ./webpack.production.config.js"
+    "build": "webpack --config ./webpack.production.config.js",
+    "build:server": "cross-env NODE_PATH=src node scripts/build.server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "koa": "^2.8.2",
     "koa-static": "^5.0.0",
     "react": "^16.8.6",
+    "react-dev-utils": "^9.1.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1"
   },
@@ -23,6 +25,9 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "cross-env": "^6.0.3",
+    "ignore-loader": "^0.1.2",
     "react-hot-loader": "^4.12.8",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
