--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.dev.config.js"
+    "start": "webpack-dev-server --config ./webpack.dev.config.js",
+    "build": "webpack --config ./webpack.dev.config.js"
   },
   "author": "",
   "license": "ISC",
